<resources>
    <string name="app_name">GroupFlow</string>
    <string name="patient_hub">Patient Hub</string>
    <string name="appointments">Appointments</string>
    <string name="ultrascans">Ultrascans</string>
    <string name="reviews">Reviews</string>
    <string name="clinic_info">Clinic Info</string>
    <string name="info">Info</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="add_appointment">Add New Appointment</string>
    <string name="contact">Contact</string>
    <string name="clinic_address">Clinic Address</string>
    <string name="clinic_name">Clinic Name</string>
    <string name="leave_review">Write Review</string>
    <string name="your_review">Your Review</string>
    <string name="submit">Submit</string>
    <string name="request_appointment">Request Appointment</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="notes_optional">Notes (Optional)</string>
    <string name="submit_request">Submit Request</string>
    <string name="profile">Profile</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="john_example_com">john@example.com</string>
    <string name="john_doe">John Doe</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account_register">No Account? Register</string>
    <string name="skip_login">Skip Login</string>
    <string name="app_logo">App Login</string>
    <string name="upload_ultrascan_image">Upload Ultrascan Image</string>
    <string name="select_image">Select Image</string>
    <string name="doctor_info">Doctor Info</string>
    <string-array name="roles_array">
        <item>Patient</item>
        <item>Employee</item>
    </string-array>
    <string name="role_patient">Role: Patient</string>
    <string name="role_employee">Role: Employee</string>
    <string name="role">Role</string>
    <string name="upload_ultrascan">Upload Ultrascan</string>
    <string name="employee_dashboard">Employee Dashboard</string>
    <string name="logout">Log Out</string>
    <string name="phone">Phone</string>
    <string name="specialty">Specialty</string>
    <string name="dr_john_doe">Dr. John Doe</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="doctor_picture">Doctor Picture</string>
    <string name="clinic_logo">Clinic Logo</string>
    <string name="limpopo_medical_centre">Limpopo Medical Centre</string>
    <string name="email_example_com">email@example.com</string>
    <string name="mon_fri_8am_5pm">Mon–Fri: 8am–5pm</string>
    <string name="https_maps_example_com_clinic">https://maps.example.com/clinic</string>
    <string name="_27_15_056_0782">+27 15 056 0782</string>
    <string name="bic_clinic12345">BIC: CLINIC12345</string>
    <string name="_2024_07_12">2024-07-12</string>
    <string name="date">Date</string>
    <string name="great_service">Great service!</string>
    <string name="rating_stars">★★★★★</string>
    <string name="review_message">Review Message</string>
    <string name="Upload_PDF">Upload PDF</string>
    <string name="upload_image_1">Upload image</string>
    <string name="upload_image_2">Upload image 2</string>
    <string name="upload_image_3">Upload image 3</string>
    <string name="upload_image_4">Upload image 4</string>
    <string name="download">Download</string>
    <string name="view">View</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="scan_file">Scan File</string>
    <string name="patient_email_com">patient@email.com</string>
    <string name="patient_name">Patient Name</string>
    <string name="patients_recyclerview">Patients RecyclerView</string>
    <string name="no_patients_found">No patients found</string>
    <string name="no_scans_available">No Scans Available</string>
    <string name="file_name">File Name</string>
    <string name="approve_upload">Approve Upload</string>
    <string name="no_file_selected">No File Selected.</string>
    <string name="ultrascan_preview">Preview</string>
    <string name="_12_12_2025_14_30">12/12/2025 14:30</string>
    <string name="notification_message">Notification message</string>
    <string name="_01_09_2025_19_00">01/09/2025 19:00</string>
</resources>