<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <!-- Top Bar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBarUpload"
        style="@style/Widget.Material3.Toolbar"
        app:title="@string/ultrascans"
        app:titleCentered="true"
        app:navigationIcon="@drawable/ic_back"
        app:menu="@menu/menu_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Select File Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/uploadImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_ultrascan_image"
        app:layout_constraintTop_toBottomOf="@id/topAppBarUpload"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <!-- Preview Layout -->
    <LinearLayout
        android:id="@+id/previewLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/uploadImageButton"
        app:layout_constraintBottom_toTopOf="@id/bottomNav"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.5" >

        <ImageView
            android:id="@+id/previewImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:visibility="gone"
            android:contentDescription="@string/ultrascan_preview" />

        <TextView
            android:id="@+id/previewFileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/no_file_selected" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/approveUploadButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/approve_upload"
            android:visibility="gone" />
    </LinearLayout>

    <!-- Bottom Navigation -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurface"
        app:menu="@menu/bottom_nav_menu"
        app:itemIconTint="@color/nav_item_color_state"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
